# rtic-mc-experiments

atalanta-rtic/: Cargo.toml
atalanta-rtic/example-apps/: Cargo.toml
atalanta-rtic/example-apps/examples/: idle.rs  periodic_tasks.rs  rtic_deadline.rs  rtic_meetup.rs  rtic_paper_ex.rs  rtic_time_stamp.rs  rtic_uart.rs  rtic_uart2.rs  rtic_uart3.rs  rtic_uart_sw.rs  sw.rs  sw2.rs
atalanta-rtic/rtic-macro/: Cargo.toml
atalanta-rtic/rtic-macro/src/: lib.rs
atalanta-rtic/src/: export.rs  lib.rs  macros.rs  mintthresh.rs
distributions/atalanta-rtic/: Cargo.toml
distributions/atalanta-rtic/.cargo/: config.toml
distributions/atalanta-rtic/example-apps/: Cargo.toml
distributions/atalanta-rtic/example-apps/examples/: broken.rs  periodic_tasks.rs  rtic_uart_sw.rs  sw.rs  sw2.rs
distributions/atalanta-rtic/rtic-macro/: Cargo.toml
distributions/atalanta-rtic/rtic-macro/src/: lib.rs
distributions/atalanta-rtic/src/: export.rs
distributions/zeroheti-rtic/: Cargo.toml  README.md  riscv32ic-unknown-none-elf.json  rust-toolchain.toml
distributions/zeroheti-rtic/example-apps/: Cargo.toml  README.md  riscv32ec-unknown-eabi.json  riscv32ec-unknown-none-elf.json  riscv32emc-unknown-eabi.json
distributions/zeroheti-rtic/example-apps/.cargo/: config.toml
distributions/zeroheti-rtic/example-apps/examples/: idle.rs  periodic_tasks.rs  rtic_deadline.rs  rtic_meetup.rs  rtic_paper_ex.rs  rtic_time_stamp.rs  rtic_uart2.rs  rtic_uart3.rs  rtic_uart_sw.rs  shared.rs
distributions/zeroheti-rtic/rtic-macro/: Cargo.toml
distributions/zeroheti-rtic/rtic-macro/src/: lib.rs
distributions/zeroheti-rtic/src/: export.rs  lib.rs
rtic-core/src/analysis/: mod.rs
rtic-core/src/codegen/: hw_task.rs
rtic-core/src/parse_utils/: mod.rs
