[package]
name = "rtic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = false
bench = false

[dependencies]
rtic-macro = { path = "rtic-macro" }
rtic-sw-pass = { path = "../compilation_passes/rtic-sw-pass", default-features = false }
rtic-deadline-pass = { path = "../compilation_passes/rtic-deadline-pass", default-features = false }
bsp = { package = "atalanta_bsp", path = "../Atalanta/examples/atalanta_bsp" }

[features]
deadline-pass = ["rtic-macro/deadline-pass"]
fpga = ["bsp/fpga"]
rtl-tb = ["bsp/rtl-tb"]
