[package]
name = "rtic"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
test = false
bench = false

[dependencies]
rtic-macro = { path = "rtic-macro" }
rtic-sw-pass = { path = "../../compilation_passes/rtic-sw-pass", default-features = false }
rtic-deadline-pass = { path = "../../compilation_passes/rtic-deadline-pass", default-features = false }
bsp = { package = "zeroheti-bsp", git = "https://github.com/ANurmi/zeroHETI.git", default-features = false }

[features]
deadline-pass = ["rtic-macro/deadline-pass"]
fpga = ["bsp/fpga"]
rtl-tb = ["bsp/rtl-tb"]
intc-hetic = ["bsp/intc-hetic", "rtic-macro/intc-hetic"]
intc-clic = ["bsp/intc-clic", "rtic-macro/intc-clic"]
intc-edfic = ["bsp/intc-edfic", "rtic-macro/intc-edfic"]
